--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ body {
     transition: transform 0.1s linear;
 }
 
+.falling-block-piece.hard-dropping {
+    transition: transform 0.08s linear;
+}
+
 .falling-block-piece img {
     width: 100%;
     height: 100%;
@@ -103,7 +107,7 @@ body {
 }
 
 #next-block {
-    display: grid;
+    display: inline-grid;
     grid-template-columns: repeat(2, var(--block-size));
     border: 1px solid #ccc;
 }
